--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,25 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.5
 version = '1.0'
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart',
+        attributes 'Implementation-Title': 'NatureSnapAPI',
                    'Implementation-Version': version
     }
 }
 
 repositories {
     mavenCentral()
+}
+
+task myJavadocs(type: Javadoc) {
+  source = sourceSets.main.allJava
+  classpath = sourceSets.main.compileClasspath
+  destinationDir = file("${buildDir}/javadoc/")
+  failOnError = false
 }
 
 // In this section you declare the dependencies for your production and test code
@@ -21,8 +29,10 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
 }
 
-test {
-    systemProperties 'property': 'value'
+task apiJar(type: Jar) {
+    baseName "publishing-api"
+    from sourceSets.main.output
+    exclude '**/impl/**'
 }
 
 uploadArchives {
@@ -30,5 +40,23 @@ uploadArchives {
        flatDir {
            dirs 'repos'
        }
+    }
+}
+
+publishing {
+    publications {
+        impl(MavenPublication) {
+            groupId 'com.synload.SynloadFramework'
+            artifactId 'SynloadFramework'
+            version '1.3'
+    
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            // change to point to your repo, e.g. http://my.org/repo
+            url "$buildDir/repo"
+        }
     }
 }
