--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,6 @@ apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.5
 version = '1.0'
-jar {
-    manifest {
-        attributes 'Implementation-Title': 'NatureSnapAPI',
-                   'Implementation-Version': version
-    }
-}
 
 repositories {
     mavenCentral()
@@ -22,7 +16,6 @@ task myJavadocs(type: Javadoc) {
   failOnError = false
 }
 
-// In this section you declare the dependencies for your production and test code
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.14'
     testCompile 'junit:junit:4.12'
@@ -38,7 +31,7 @@ task apiJar(type: Jar) {
 uploadArchives {
     repositories {
        flatDir {
-           dirs 'repos'
+           dirs 'build/repos'
        }
     }
 }
@@ -46,8 +39,8 @@ uploadArchives {
 publishing {
     publications {
         impl(MavenPublication) {
-            groupId 'com.synload.SynloadFramework'
-            artifactId 'SynloadFramework'
+            groupId 'net.naturesnap.api'
+            artifactId 'NatureSnapAPI'
             version '1.3'
     
             from components.java
@@ -56,7 +49,7 @@ publishing {
     repositories {
         maven {
             // change to point to your repo, e.g. http://my.org/repo
-            url "$buildDir/repo"
+            url "$buildDir/repos"
         }
     }
 }
