Working Json Reader

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.14'
     testCompile 'junit:junit:4.12'
     compile 'org.apache.httpcomponents:httpclient:4.5.2'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.7.1'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.1-1'
+    compile 'com.fasterxml:jackson-module-json-org:0.9.1'
+    compile 'com.fasterxml:jackson-xml-databind:0.6.2'
 }
 
 task apiJar(type: Jar) {
